--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 annotated-types==0.7.0
-anyio==4.4.0
 blinker==1.8.2
 blis==0.7.11
 catalogue==2.0.10
@@ -9,17 +8,17 @@ click==8.1.7
 cloudpathlib==0.18.1
 confection==0.1.5
 contourpy==1.2.1
+curated-tokenizers==0.0.9
+curated-transformers==0.1.1
 cycler==0.12.1
 cymem==2.0.8
-distro==1.9.0
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
+en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3-py3-none-any.whl#sha256=f72abb34bdf174876bd4267b29b2501677e605e0a251fdc56c163003182ed68b
+filelock==3.15.4
 Flask==3.0.3
 fonttools==4.53.1
-gensim==3.8.2
-groq==0.9.0
-h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.0
+fsspec==2024.6.1
+huggingface-hub==0.24.5
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
@@ -30,11 +29,25 @@ language_data==1.2.0
 marisa-trie==1.2.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matplotlib==3.9.1
+matplotlib==3.9.1.post1
 mdurl==0.1.2
+mpmath==1.3.0
 murmurhash==1.0.10
+networkx==3.3
 nltk==3.8.1
 numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.6.20
+nvidia-nvtx-cu12==12.1.105
 packaging==24.1
 pandas==2.2.2
 pillow==10.4.0
@@ -44,26 +57,29 @@ pydantic_core==2.20.1
 Pygments==2.18.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
 pytz==2024.1
+PyYAML==6.0.2
 regex==2024.7.24
 requests==2.32.3
 rich==13.7.1
-scipy==1.13.1
+safetensors==0.4.4
 seaborn==0.13.2
-setuptools==72.1.0
 shellingham==1.5.4
 six==1.16.0
 smart-open==7.0.4
-sniffio==1.3.1
 spacy==3.7.5
+spacy-curated-transformers==0.2.2
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.4.8
+sympy==1.13.1
 textblob==0.18.0.post0
 thinc==8.2.5
-thinc_apple_ops==0.1.5
-tqdm==4.66.4
+tokenizers==0.19.1
+torch==2.4.0
+tqdm==4.66.5
+transformers==4.44.0
+triton==3.0.0
 typer==0.12.3
 typing_extensions==4.12.2
 tzdata==2024.1
@@ -71,5 +87,4 @@ urllib3==2.2.2
 wasabi==1.1.3
 weasel==0.4.1
 Werkzeug==3.0.3
-wheel==0.43.0
 wrapt==1.16.0
