--- a/requirements.txt
+++ b/requirements.txt
@@ -1,86 +1,134 @@
 annotated-types==0.7.0
+anyio==4.4.0
+asttokens==2.4.1
+bleach==6.1.0
 blinker==1.8.2
 blis==0.7.11
+cachetools==5.3.1
 catalogue==2.0.10
-certifi==2024.7.4
-charset-normalizer==3.3.2
+certifi==2024.6.2
+charset-normalizer==3.1.0
+chess==1.10.0
 click==8.1.7
 cloudpathlib==0.18.1
+comm==0.2.2
+command-not-found==0.3
 confection==0.1.5
 contourpy==1.2.1
+cryptography==3.4.8
 cycler==0.12.1
 cymem==2.0.8
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
-filelock==3.15.4
+dbus-python==1.2.18
+debugpy==1.8.1
+decorator==5.1.1
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
+exceptiongroup==1.2.1
+executing==2.0.1
 Flask==3.0.3
 fonttools==4.53.1
-fsspec==2024.6.1
-huggingface-hub==0.24.5
-idna==3.7
+google-auth==2.21.0
+google-auth-oauthlib==1.0.0
+groq==0.9.0
+gspread==5.10.0
+h11==0.14.0
+httpcore==1.0.5
+httplib2==0.20.2
+httpx==0.27.0
+idna==3.4
+importlib-metadata==4.6.4
+ipykernel==6.29.4
+ipython==8.25.0
 itsdangerous==2.2.0
+jedi==0.19.1
+jeepney==0.7.1
 Jinja2==3.1.4
 joblib==1.4.2
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+kaggle==1.6.14
+keyring==23.5.0
 kiwisolver==1.4.5
 langcodes==3.4.0
 language_data==1.2.0
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
 marisa-trie==1.2.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matplotlib==3.9.1.post1
+matplotlib==3.9.1
+matplotlib-inline==0.1.7
 mdurl==0.1.2
-mpmath==1.3.0
+more-itertools==8.10.0
 murmurhash==1.0.10
-networkx==3.3
-nltk==3.8.2
+nest-asyncio==1.6.0
+netifaces==0.11.0
+nltk==3.8.1
 numpy==1.26.4
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.6.20
-nvidia-nvtx-cu12==12.1.105
-packaging==24.1
+oauthlib==3.2.0
+packaging==24.0
 pandas==2.2.2
+parso==0.8.4
+pexpect==4.9.0
 pillow==10.4.0
+platformdirs==4.2.2
 preshed==3.0.9
+prompt_toolkit==3.0.46
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pydantic==2.8.2
 pydantic_core==2.20.1
+pygame==2.5.2
 Pygments==2.18.0
-pyparsing==3.1.2
+PyGObject==3.42.1
+PyJWT==2.3.0
+pyparsing==2.4.7
+python-apt==2.4.0+ubuntu3
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-slugify==8.0.4
 pytz==2024.1
-PyYAML==6.0.2
+PyYAML==5.4.1
+pyzmq==26.0.3
 regex==2024.7.24
-requests==2.32.3
+requests==2.31.0
+requests-oauthlib==1.3.1
 rich==13.7.1
-safetensors==0.4.4
+rsa==4.9
 seaborn==0.13.2
+SecretStorage==3.3.1
 shellingham==1.5.4
 six==1.16.0
 smart-open==7.0.4
+sniffio==1.3.1
 spacy==3.7.5
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.4.8
-sympy==1.13.2
+stack-data==0.6.3
+systemd-python==234
+text-unidecode==1.3
 textblob==0.18.0.post0
 thinc==8.2.5
-tokenizers==0.19.1
-torch==2.4.0
-tqdm==4.66.5
-transformers==4.44.0
-triton==3.0.0
+tornado==6.4
+tqdm==4.66.4
+traitlets==5.14.3
 typer==0.12.3
-typing_extensions==4.12.2
+typing_extensions==4.12.1
 tzdata==2024.1
-urllib3==2.2.2
+ubuntu-pro-client==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.16
+wadllib==1.3.6
 wasabi==1.1.3
+wcwidth==0.2.13
 weasel==0.4.1
+webencodings==0.5.1
 Werkzeug==3.0.3
 wrapt==1.16.0
+zipp==1.0.0
