--- a/requirements.txt
+++ b/requirements.txt
@@ -1,134 +1,127 @@
+aiohappyeyeballs==2.3.7
+aiohttp==3.10.4
+aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.4.0
-asttokens==2.4.1
-bleach==6.1.0
+async-timeout==4.0.3
+attrs==24.2.0
 blinker==1.8.2
 blis==0.7.11
-cachetools==5.3.1
 catalogue==2.0.10
-certifi==2024.6.2
-charset-normalizer==3.1.0
-chess==1.10.0
+certifi==2024.7.4
+charset-normalizer==3.3.2
 click==8.1.7
 cloudpathlib==0.18.1
-comm==0.2.2
-command-not-found==0.3
 confection==0.1.5
 contourpy==1.2.1
-cryptography==3.4.8
+curated-tokenizers==0.0.9
+curated-transformers==0.1.1
 cycler==0.12.1
 cymem==2.0.8
-dbus-python==1.2.18
-debugpy==1.8.1
-decorator==5.1.1
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
-exceptiongroup==1.2.1
-executing==2.0.1
+dash==2.17.1
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+deprecation==2.1.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
+en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3-py3-none-any.whl#sha256=f72abb34bdf174876bd4267b29b2501677e605e0a251fdc56c163003182ed68b
+exceptiongroup==1.2.2
+filelock==3.15.4
 Flask==3.0.3
 fonttools==4.53.1
-google-auth==2.21.0
-google-auth-oauthlib==1.0.0
-groq==0.9.0
-gspread==5.10.0
+frozenlist==1.4.1
+fsspec==2024.6.1
+gotrue==2.7.0
 h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
 httpcore==1.0.5
-httplib2==0.20.2
 httpx==0.27.0
-idna==3.4
-importlib-metadata==4.6.4
-ipykernel==6.29.4
-ipython==8.25.0
+huggingface-hub==0.24.5
+hyperframe==6.0.1
+idna==3.7
+importlib_metadata==8.4.0
 itsdangerous==2.2.0
-jedi==0.19.1
-jeepney==0.7.1
 Jinja2==3.1.4
 joblib==1.4.2
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-kaggle==1.6.14
-keyring==23.5.0
 kiwisolver==1.4.5
 langcodes==3.4.0
 language_data==1.2.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
 marisa-trie==1.2.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matplotlib==3.9.1
-matplotlib-inline==0.1.7
+matplotlib==3.9.1.post1
 mdurl==0.1.2
-more-itertools==8.10.0
+mpmath==1.3.0
+multidict==6.0.5
 murmurhash==1.0.10
 nest-asyncio==1.6.0
-netifaces==0.11.0
+networkx==3.3
 nltk==3.8.1
 numpy==1.26.4
-oauthlib==3.2.0
-packaging==24.0
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.6.20
+nvidia-nvtx-cu12==12.1.105
+packaging==24.1
 pandas==2.2.2
-parso==0.8.4
-pexpect==4.9.0
 pillow==10.4.0
-platformdirs==4.2.2
+plotly==5.23.0
+postgrest==0.16.10
 preshed==3.0.9
-prompt_toolkit==3.0.46
-psutil==5.9.8
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
 pydantic==2.8.2
 pydantic_core==2.20.1
-pygame==2.5.2
 Pygments==2.18.0
-PyGObject==3.42.1
-PyJWT==2.3.0
-pyparsing==2.4.7
-python-apt==2.4.0+ubuntu3
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-python-slugify==8.0.4
 pytz==2024.1
-PyYAML==5.4.1
-pyzmq==26.0.3
+PyYAML==6.0.2
+realtime==2.0.1
 regex==2024.7.24
-requests==2.31.0
-requests-oauthlib==1.3.1
+requests==2.32.3
+retrying==1.3.4
 rich==13.7.1
-rsa==4.9
+safetensors==0.4.4
 seaborn==0.13.2
-SecretStorage==3.3.1
 shellingham==1.5.4
 six==1.16.0
 smart-open==7.0.4
 sniffio==1.3.1
 spacy==3.7.5
+spacy-curated-transformers==0.2.2
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.4.8
-stack-data==0.6.3
-systemd-python==234
-text-unidecode==1.3
+storage3==0.7.7
+StrEnum==0.4.15
+supabase==2.7.2
+supafunc==0.5.1
+sympy==1.13.1
+tenacity==9.0.0
 textblob==0.18.0.post0
 thinc==8.2.5
-tornado==6.4
-tqdm==4.66.4
-traitlets==5.14.3
+tokenizers==0.19.1
+torch==2.4.0
+tqdm==4.66.5
+transformers==4.44.0
+triton==3.0.0
 typer==0.12.3
-typing_extensions==4.12.1
+typing_extensions==4.12.2
 tzdata==2024.1
-ubuntu-pro-client==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.16
-wadllib==1.3.6
+urllib3==2.2.2
 wasabi==1.1.3
-wcwidth==0.2.13
 weasel==0.4.1
-webencodings==0.5.1
+websockets==12.0
 Werkzeug==3.0.3
 wrapt==1.16.0
-zipp==1.0.0
+yarl==1.9.4
+zipp==3.20.0
