--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-aiohappyeyeballs==2.3.7
-aiohttp==3.10.4
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.4.0
-async-timeout==4.0.3
 attrs==24.2.0
 blinker==1.8.2
 blis==0.7.11
@@ -13,51 +12,44 @@ charset-normalizer==3.3.2
 click==8.1.7
 cloudpathlib==0.18.1
 confection==0.1.5
-contourpy==1.2.1
-curated-tokenizers==0.0.9
-curated-transformers==0.1.1
-cycler==0.12.1
 cymem==2.0.8
 dash==2.17.1
+dash-bootstrap-components==1.6.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
 deprecation==2.1.0
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
-en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3-py3-none-any.whl#sha256=f72abb34bdf174876bd4267b29b2501677e605e0a251fdc56c163003182ed68b
-exceptiongroup==1.2.2
 filelock==3.15.4
 Flask==3.0.3
-fonttools==4.53.1
 frozenlist==1.4.1
 fsspec==2024.6.1
 gotrue==2.7.0
+gunicorn==23.0.0
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
 httpcore==1.0.5
 httpx==0.27.0
-huggingface-hub==0.24.5
+huggingface-hub==0.24.6
 hyperframe==6.0.1
-idna==3.7
+idna==3.8
 importlib_metadata==8.4.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 joblib==1.4.2
-kiwisolver==1.4.5
 langcodes==3.4.0
 language_data==1.2.0
 marisa-trie==1.2.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matplotlib==3.9.1.post1
 mdurl==0.1.2
 mpmath==1.3.0
 multidict==6.0.5
 murmurhash==1.0.10
 nest-asyncio==1.6.0
 networkx==3.3
-nltk==3.8.1
+nltk==3.9.1
 numpy==1.26.4
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
@@ -73,55 +65,53 @@ nvidia-nvjitlink-cu12==12.6.20
 nvidia-nvtx-cu12==12.1.105
 packaging==24.1
 pandas==2.2.2
-pillow==10.4.0
 plotly==5.23.0
-postgrest==0.16.10
+postgrest==0.16.11
 preshed==3.0.9
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
-pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.2
-realtime==2.0.1
+realtime==2.0.2
 regex==2024.7.24
 requests==2.32.3
 retrying==1.3.4
 rich==13.7.1
 safetensors==0.4.4
-seaborn==0.13.2
+setuptools==73.0.1
 shellingham==1.5.4
 six==1.16.0
 smart-open==7.0.4
 sniffio==1.3.1
-spacy==3.7.5
-spacy-curated-transformers==0.2.2
+spacy==3.7.6
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.4.8
 storage3==0.7.7
 StrEnum==0.4.15
-supabase==2.7.2
+supabase==2.7.3
 supafunc==0.5.1
-sympy==1.13.1
+sympy==1.13.2
 tenacity==9.0.0
 textblob==0.18.0.post0
 thinc==8.2.5
 tokenizers==0.19.1
 torch==2.4.0
 tqdm==4.66.5
-transformers==4.44.0
+transformers==4.44.2
 triton==3.0.0
-typer==0.12.3
+typer==0.12.4
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 wasabi==1.1.3
 weasel==0.4.1
 websockets==12.0
-Werkzeug==3.0.3
+Werkzeug==3.0.4
+wheel==0.44.0
 wrapt==1.16.0
 yarl==1.9.4
 zipp==3.20.0
