--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ anyio==4.4.0
 attrs==24.2.0
 blinker==1.8.2
 blis==0.7.11
+cachelib==0.13.0
 catalogue==2.0.10
 certifi==2024.7.4
 charset-normalizer==3.3.2
@@ -22,6 +23,7 @@ deprecation==2.1.0
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
 filelock==3.15.4
 Flask==3.0.3
+Flask-Session==0.8.0
 frozenlist==1.4.1
 fsspec==2024.6.1
 gotrue==2.7.0
@@ -45,6 +47,7 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 mpmath==1.3.0
+msgspec==0.18.6
 multidict==6.0.5
 murmurhash==1.0.10
 nest-asyncio==1.6.0
@@ -76,6 +79,7 @@ python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.2
 realtime==2.0.2
+redis==5.0.8
 regex==2024.7.24
 requests==2.32.3
 retrying==1.3.4
