--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,14 +1,11 @@
-events {
+server {
+    
+    listen 80;
+    server_name 128.199.2.109;
+    client_max_body_size 5G;
 
-}
-
-http {
-
-        server {
-
-                listen 80;
-                server_name 137.184.236.68; 
-
-                return 200 "Success";
-        }
+    location / {
+        include proxy_params;
+        proxy_pass http://0.0.0.0:8080;
+    }
 }
