--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,43 @@
+# Redirect HTTP to HTTPS
 server {
-    
     listen 80;
-    server_name 128.199.2.109;
-    client_max_body_size 5G;
+    server_name valid8.club www.valid8.club;
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+# Handle HTTPS requests
+server {
+    listen 443 ssl http2;
+    server_name valid8.club www.valid8.club;
+    client_max_body_size 20G;  # Allow files up to 20 GB
+
+    # SSL certificate and key
+    ssl_certificate /etc/letsencrypt/live/valid8.club/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/valid8.club/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+
+    # Disable sendfile to prevent broken pipe issues
+    sendfile off;
+
+    # Increase buffer sizes for large file uploads
+    client_body_buffer_size 100M;
+    proxy_buffers 16 16k;
+    proxy_buffer_size 32k;
+    proxy_busy_buffers_size 64k;
+
+    # Increase timeouts
+    proxy_read_timeout 1200s; 
+    proxy_connect_timeout 1200s;
+    proxy_send_timeout 1200s;
 
     location / {
         include proxy_params;
-        proxy_pass http://0.0.0.0:8080;
+        proxy_pass http://0.0.0.0:8080;  # Ensure this matches your application’s port
     }
 }
